k8s/overlays/server/auth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-auth
  namespace: apps
spec:
  basicAuth:
    secret: admin-basic-auth
